--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,11 @@
                         </select>
                     </div>
                     <div class="mb-3">
+                        <label for="contact_search" class="form-label">Search by Email or Contact ID (Optional)</label>
+                        <input type="text" class="form-control" id="contact_search" name="contact_search" placeholder="Enter email or contact ID">
+                        <small class="form-text text-muted">If provided, other filters will be ignored</small>
+                    </div>
+                    <div class="mb-3">
                         <label class="form-label">State Filter</label>
                         <div class="form-check mb-2">
                             <input class="form-check-input" type="radio" name="filter_type" id="filter_none" value="none" checked>
